--- a/README
+++ b/README
@@ -5,6 +5,7 @@ Getting started:
 
 Mac OS X and Linux users:
 
+- Requirements: Python 2.6+, Git, SVN
 - Clone the lime git repo (you have probably already done that):
     git clone git://github.com/digitalfruit/limejs.git
 - bin/lime.py --help
