--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# LimeJS is originally developed by Digital Fruit http://www.digitalfruit.ee/en/
+# LimeJS is originally developed by Digital Fruit http://www.digitalfruit.eu/
 # Everyone can help along by sending patches,optimizations, new features etc.
 
 # This is a list of contributors to Lime.
