Adding contributor names

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,6 @@
 # This is a list of contributors to Lime.
 Tõnis Tiigi <tonis@digitalfruit.info>
 Pavel Jartsev <papi@digitalfruit.info>
+Anders Lauritsen <ducklord@gmail.com>
+Rob O'Dwyer <odwyerrob@gmail.com>
 
