--- a/AUTHORS
+++ b/AUTHORS
@@ -6,4 +6,4 @@ Tõnis Tiigi <tonis@digitalfruit.info>
 Pavel Jartsev <papi@digitalfruit.info>
 Anders Lauritsen <ducklord@gmail.com>
 Rob O'Dwyer <odwyerrob@gmail.com>
-
+Carsten Moberg Hammer <moberg@komogvind.dk>
