--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,7 @@ Pavel Jartsev <papi@digitalfruit.info>
 Anders Lauritsen <ducklord@gmail.com>
 Rob O'Dwyer <odwyerrob@gmail.com>
 Carsten Moberg Hammer <moberg@komogvind.dk>
+Russ <russplaysguitar@yahoo.com>
+Michael Sawyer <msawyer4@mail.csuchico.edu>
+Grady O'Connell <flipcoder@gmail.com>
+Caleb Callaway <enlightened.despot@gmail.com>
