--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,5 @@ Michael Sawyer <msawyer4@mail.csuchico.edu>
 Grady O'Connell <flipcoder@gmail.com>
 Caleb Callaway <enlightened.despot@gmail.com>
 Mathieu ATTAL <zapoutix@gmail.com>
+Sean Stringer <sstringa@gmail.com>
+Marc Mauger <simianarmy@gmail.com>
