authors list update

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@ Caleb Callaway <enlightened.despot@gmail.com>
 Mathieu ATTAL <zapoutix@gmail.com>
 Sean Stringer <sstringa@gmail.com>
 Marc Mauger <simianarmy@gmail.com>
+James Chen <flufy3d@gmail.com>
