--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,10 @@ James Chen <flufy3d@gmail.com>
 Italo Nascimento <italo.nascimento@hotmail.com.br>
 Malius Arth <maliusarth@gmail.com>
 Bulkan Evcimen <bulkan@gmail.com>
+Joel Muzzerall <joel.muzzerall@gmail.com>
+Aurélio Santos <aurelio.santos@present-technologies.com>
+Ludolph Neethling <vcs@ludo.co.za>
+Ruud Klaver <r.klaver@bureaublauwgeel.nl>
+James Mikkelson <james@madcapsule.co.uk>
+Kristina Chodorow <k.chodorow@gmail.com>
+Benoit Letondor <benoit@appgratis.com>
